# uxt.rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/binance/spot/: mod.rs
src/binance/spot/rest/: account.rs  depth.rs  klines.rs  mod.rs  trades.rs
src/binance/spot/rest/order/: cancel.rs  create.rs  mod.rs  opened.rs  status.rs
src/binance/spot/rest/userdata/: model.rs  service.rs
src/binance/spot/stream/: manager.rs  mod.rs
src/binance/spot/stream/public/: mod.rs
src/binance/spot/stream/user/: mod.rs  request.rs
src/binance/spot/stream/userdata/: mod.rs
src/binance/spot/transport/: endpoint.rs  mod.rs  rest.rs  rest_client.rs  signer.rs  ws.rs  ws_builder.rs
src/binance/spot/transport/ws_client/: conn.rs  event.rs  mod.rs  role.rs
src/binance/spot/ws/: mod.rs
src/binance/spot/ws/auth/: model.rs  service.rs
src/binance/spot/ws/kline/: model.rs  service.rs
src/binance/spot/ws/order/: mod.rs
src/binance/spot/ws/ping/: model.rs  service.rs
src/binance/spot/ws/ticker/: model.rs  service.rs
src/binance/spot/ws/time/: model.rs  service.rs
src/db/postgres/: connect.rs
src/stream/binance/: mod.rs  public.rs  userdata.rs  ws.rs
src/stream/binance/spot/: mod.rs
src/stream/binance/spot/public/: account.rs  balance.rs  mod.rs  terminated.rs  ticker.rs  trade.rs
src/utils/: mod.rs  request.rs
tests/: binance_order_flow.rs  binance_stream.rs  test_api_binance_order_flow.rs  test_binance_spot_pub_stream.rs  test_binance_spot_user_stream.rs  test_binance_spot_userdata_stream.rs  test_binance_spot_ws_api.rs
(+29 files in other folders)
