[package]
name = "utx"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.46.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] } 
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde_urlencoded = "0.7"
reqwest = "0.12.23"
chrono = "0.4.42"
dotenvy = "0.15.7"
base64 = "0.21"
ed25519-dalek = { version = "2.0.1", features = ["pkcs8"] }
urlencoding = "2.1"
pkcs8 = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] } 
serde_json = "1.0.145"
anyhow = "1.0.100"
futures = "0.3.31"
uuid = { version = "1.19.0", features = ["v4"] }    
url = "2.5.7"
futures-util = "0.3.31"
tracing = "0.1.43"